# csm_mlx

./: .gitignore  README.md  example.ipynb  flake.nix  main.py  mlxtrace.py  old.py  pyproject.toml
src/csm_mlx/codec/: conv.py  mimi.py  rvq.py  seanet.py  transformer.py
src/csm_mlx/generate/: csm.py  utils.py
src/csm_mlx/io/: wav.py
src/csm_mlx/lm/: cache.py  config.py  csm.py  rq_transformer.py
src/csm_mlx/lm/utils/: constraints.py  prompt.py  rope.py  samplers.py
src/csm_mlx/loaders/: __init__.py  csm.py
src/csm_mlx/scripts/: server.py
src/csm_mlx/server/: settings.py  tts_core.py
src/csm_mlx/server/routes/: elevenlabs.py  openai.py
static/: index.html
tests/: compare_npy.py  test_csm.py  test_decoder.py  test_encoder.py
utils/: create_csm_init.ipynb  library_example.ipynb
